Code clean ups.