@@ -17,8 +17,8 @@
 package org.apache.commons.compress.harmony.unpack200.bytecode;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -44,7 +44,7 @@ public class ClassConstantPool {
 
     private boolean resolved;
 
-    public ClassFileEntry add(ClassFileEntry entry) {
+    public ClassFileEntry add(final ClassFileEntry entry) {
         if (entry instanceof ByteCode) {
             return null;
         }
@@ -52,10 +52,8 @@ public class ClassConstantPool {
             if (entriesContainsSet.add(entry)) {
                 entries.add(entry);
             }
-        } else {
-            if (othersContainsSet.add(entry)) {
-                others.add(entry);
-            }
+        } else if (othersContainsSet.add(entry)) {
+            others.add(entry);
         }
 
         return entry;
@@ -65,8 +63,8 @@ public class ClassConstantPool {
         boolean added = true;
 
         // initial assignment
-        ArrayList parents = new ArrayList(512);
-        ArrayList children = new ArrayList(512);
+        final ArrayList parents = new ArrayList(512);
+        final ArrayList children = new ArrayList(512);
 
         // adding old entries
         parents.addAll(entries);
@@ -78,27 +76,23 @@ public class ClassConstantPool {
 
             children.clear();
 
-            int entriesOriginalSize = entries.size();
-            int othersOriginalSize = others.size();
+            final int entriesOriginalSize = entries.size();
+            final int othersOriginalSize = others.size();
 
             // get the parents' children and add them to buffer
             // concurrently add parents to target storage
             for(int indexParents = 0; indexParents < parents.size(); indexParents++) {
-                ClassFileEntry entry = (ClassFileEntry) parents.get(indexParents);
+                final ClassFileEntry entry = (ClassFileEntry) parents.get(indexParents);
 
                 // traverse children
-                ClassFileEntry[] entryChildren = entry.getNestedClassFileEntries();
-                for(int c = 0; c < entryChildren.length; c++) {
-                    children.add(entryChildren[c]);
-                }
+                final ClassFileEntry[] entryChildren = entry.getNestedClassFileEntries();
+                children.addAll(Arrays.asList(entryChildren));
 
-                boolean isAtStart = (entry instanceof ByteCode)
+                final boolean isAtStart = (entry instanceof ByteCode)
                         && ((ByteCode) entry).nestedMustStartClassPool();
 
                 if (isAtStart) {
-                    for (int c = 0; c < entryChildren.length; c++) {
-                        mustStartClassPool.add(entryChildren[c]);
-                    }
+                    mustStartClassPool.addAll(Arrays.asList(entryChildren));
                 }
 
                 // add parent
@@ -114,14 +108,15 @@ public class ClassConstantPool {
         }
     }
 
-    public int indexOf(ClassFileEntry entry) {
-        if (!resolved)
+    public int indexOf(final ClassFileEntry entry) {
+        if (!resolved) {
             throw new IllegalStateException(
                     "Constant pool is not yet resolved; this does not make any sense");
+        }
         if (null == indexCache) {
             throw new IllegalStateException("Index cache is not initialized!");
         }
-        Integer entryIndex = ((Integer) indexCache.get(entry));
+        final Integer entryIndex = ((Integer) indexCache.get(entry));
         // If the entry isn't found, answer -1. Otherwise answer the entry.
         if (entryIndex != null) {
             return entryIndex.intValue() + 1;
@@ -134,54 +129,39 @@ public class ClassConstantPool {
     }
 
     public ClassFileEntry get(int i) {
-        if (!resolved)
+        if (!resolved) {
             throw new IllegalStateException(
                     "Constant pool is not yet resolved; this does not make any sense");
+        }
         return (ClassFileEntry) entries.get(--i);
     }
 
-    public void resolve(Segment segment) {
+    public void resolve(final Segment segment) {
         initialSort();
         sortClassPool();
 
         resolved = true;
 
         for(int it = 0; it < entries.size(); it++) {
-            ClassFileEntry entry = (ClassFileEntry) entries.get(it);
+            final ClassFileEntry entry = (ClassFileEntry) entries.get(it);
             entry.resolve(this);
         }
 
         for(int it = 0; it < others.size(); it++) {
-            ClassFileEntry entry = (ClassFileEntry) others.get(it);
+            final ClassFileEntry entry = (ClassFileEntry) others.get(it);
             entry.resolve(this);
         }
 
     }
 
     private void initialSort() {
-        TreeSet inCpAll = new TreeSet(new Comparator() {
-            public int compare(Object arg0, Object arg1) {
-                return ((ConstantPoolEntry)arg0).getGlobalIndex() - ((ConstantPoolEntry)arg1).getGlobalIndex();
-            }
-        });
-        TreeSet cpUtf8sNotInCpAll = new TreeSet(new Comparator() {
-
-            public int compare(Object arg0, Object arg1) {
-                return ((CPUTF8)arg0).underlyingString().compareTo(((CPUTF8)arg1).underlyingString());
-            }
-
-        });
-        TreeSet cpClassesNotInCpAll = new TreeSet(new Comparator() {
-
-            public int compare(Object arg0, Object arg1) {
-                return ((CPClass)arg0).getName().compareTo(((CPClass)arg1).getName());
-            }
-
-        });
+        final TreeSet inCpAll = new TreeSet((arg0, arg1) -> ((ConstantPoolEntry)arg0).getGlobalIndex() - ((ConstantPoolEntry)arg1).getGlobalIndex());
+        final TreeSet cpUtf8sNotInCpAll = new TreeSet((arg0, arg1) -> ((CPUTF8)arg0).underlyingString().compareTo(((CPUTF8)arg1).underlyingString()));
+        final TreeSet cpClassesNotInCpAll = new TreeSet((arg0, arg1) -> ((CPClass)arg0).getName().compareTo(((CPClass)arg1).getName()));
 
 
         for(int index = 0; index < entries.size(); index++) {
-            ConstantPoolEntry entry = (ConstantPoolEntry) entries.get(index);
+            final ConstantPoolEntry entry = (ConstantPoolEntry) entries.get(index);
             if(entry.getGlobalIndex() == -1) {
                 if (entry instanceof CPUTF8) {
                     cpUtf8sNotInCpAll.add(entry);
@@ -211,11 +191,11 @@ public class ClassConstantPool {
         // start of the class pool
 
 
-        ArrayList startOfPool = new ArrayList(entries.size());
-        ArrayList finalSort = new ArrayList(entries.size());
+        final ArrayList startOfPool = new ArrayList(entries.size());
+        final ArrayList finalSort = new ArrayList(entries.size());
 
         for(int i = 0; i < entries.size(); i++) {
-            ClassFileEntry nextEntry = (ClassFileEntry) entries.get(i);
+            final ClassFileEntry nextEntry = (ClassFileEntry) entries.get(i);
             if (mustStartClassPool.contains(nextEntry)) {
                 startOfPool.add(nextEntry);
             } else {
@@ -231,8 +211,8 @@ public class ClassConstantPool {
         entries.clear();
 
         for(int itIndex = 0; itIndex < startOfPool.size(); itIndex++) {
-            ClassFileEntry entry = (ClassFileEntry) startOfPool.get(itIndex);
-            indexCache.put(entry, new Integer(index));
+            final ClassFileEntry entry = (ClassFileEntry) startOfPool.get(itIndex);
+            indexCache.put(entry, Integer.valueOf(index));
 
             if (entry instanceof CPLong || entry instanceof CPDouble) {
                 entries.add(entry); // these get 2 slots because of their size
@@ -245,8 +225,8 @@ public class ClassConstantPool {
         }
 
         for(int itFinal = 0; itFinal < finalSort.size(); itFinal++) {
-            ClassFileEntry entry = (ClassFileEntry) finalSort.get(itFinal);
-            indexCache.put(entry, new Integer(index));
+            final ClassFileEntry entry = (ClassFileEntry) finalSort.get(itFinal);
+            indexCache.put(entry, Integer.valueOf(index));
 
             if (entry instanceof CPLong || entry instanceof CPDouble) {
                 entries.add(entry); // these get 2 slots because of their size
@@ -260,9 +240,9 @@ public class ClassConstantPool {
 
     }
 
-    public ClassFileEntry addWithNestedEntries(ClassFileEntry entry) {
+    public ClassFileEntry addWithNestedEntries(final ClassFileEntry entry) {
         add(entry);
-        ClassFileEntry[] nestedEntries = entry.getNestedClassFileEntries();
+        final ClassFileEntry[] nestedEntries = entry.getNestedClassFileEntries();
         for (int i = 0; i < nestedEntries.length; i++) {
             addWithNestedEntries(nestedEntries[i]);
         }
