@@ -35,17 +35,17 @@ public class CodeAttribute extends BCIRenumberedAttribute {
     public int maxStack;
     private static CPUTF8 attributeName;
 
-    public CodeAttribute(int maxStack, int maxLocals, byte codePacked[],
-            Segment segment, OperandManager operandManager, List exceptionTable) {
+    public CodeAttribute(final int maxStack, final int maxLocals, final byte codePacked[],
+            final Segment segment, final OperandManager operandManager, final List exceptionTable) {
         super(attributeName);
         this.maxLocals = maxLocals;
         this.maxStack = maxStack;
         this.codeLength = 0;
         this.exceptionTable = exceptionTable;
-        byteCodeOffsets.add(new Integer(0));
+        byteCodeOffsets.add(Integer.valueOf(0));
         int byteCodeIndex = 0;
         for (int i = 0; i < codePacked.length; i++) {
-            ByteCode byteCode = ByteCode.getByteCode(codePacked[i] & 0xff);
+            final ByteCode byteCode = ByteCode.getByteCode(codePacked[i] & 0xff);
             // Setting the offset must happen before extracting operands
             // because label bytecodes need to know their offsets.
             byteCode.setByteCodeIndex(byteCodeIndex);
@@ -53,20 +53,20 @@ public class CodeAttribute extends BCIRenumberedAttribute {
             byteCode.extractOperands(operandManager, segment, codeLength);
             byteCodes.add(byteCode);
             codeLength += byteCode.getLength();
-            int lastBytecodePosition = ((Integer) byteCodeOffsets
+            final int lastBytecodePosition = ((Integer) byteCodeOffsets
                     .get(byteCodeOffsets.size() - 1)).intValue();
             // This code assumes all multiple byte bytecodes are
             // replaced by a single-byte bytecode followed by
             // another bytecode.
             if (byteCode.hasMultipleByteCodes()) {
-                byteCodeOffsets.add(new Integer(lastBytecodePosition + 1));
+                byteCodeOffsets.add(Integer.valueOf(lastBytecodePosition + 1));
                 byteCodeIndex++;
             }
             // I've already added the first element (at 0) before
             // entering this loop, so make sure I don't add one
             // after the last element.
             if (i < (codePacked.length - 1)) {
-                byteCodeOffsets.add(new Integer(lastBytecodePosition
+                byteCodeOffsets.add(Integer.valueOf(lastBytecodePosition
                         + byteCode.getLength()));
             }
             if (byteCode.getOpcode() == 0xC4) {
@@ -81,30 +81,32 @@ public class CodeAttribute extends BCIRenumberedAttribute {
         // At this point, byteCodes may be a different size than
         // codePacked because of wide bytecodes.
         for (int i = 0; i < byteCodes.size(); i++) {
-            ByteCode byteCode = (ByteCode) byteCodes.get(i);
+            final ByteCode byteCode = (ByteCode) byteCodes.get(i);
             byteCode.applyByteCodeTargetFixup(this);
         }
     }
 
+    @Override
     protected int getLength() {
         int attributesSize = 0;
         for(int it = 0; it < attributes.size(); it++) {
-            Attribute attribute = (Attribute) attributes.get(it);
+            final Attribute attribute = (Attribute) attributes.get(it);
             attributesSize += attribute.getLengthIncludingHeader();
         }
         return 2 + 2 + 4 + codeLength + 2 + exceptionTable.size()
                 * (2 + 2 + 2 + 2) + 2 + attributesSize;
     }
 
+    @Override
     protected ClassFileEntry[] getNestedClassFileEntries() {
-        ArrayList nestedEntries = new ArrayList(attributes.size() + byteCodes.size() + 10);
+        final ArrayList nestedEntries = new ArrayList(attributes.size() + byteCodes.size() + 10);
         nestedEntries.add(getAttributeName());
         nestedEntries.addAll(byteCodes);
         nestedEntries.addAll(attributes);
         // Don't forget to add the ExceptionTable catch_types
         for(int iter = 0; iter < exceptionTable.size(); iter++) {
-            ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(iter);
-            CPClass catchType = entry.getCatchType();
+            final ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(iter);
+            final CPClass catchType = entry.getCatchType();
             // If the catch type is null, this is a finally
             // block. If it's not null, we need to add the
             // CPClass to the list of nested class file entries.
@@ -112,58 +114,61 @@ public class CodeAttribute extends BCIRenumberedAttribute {
                 nestedEntries.add(catchType);
             }
         }
-        ClassFileEntry[] nestedEntryArray = new ClassFileEntry[nestedEntries
+        final ClassFileEntry[] nestedEntryArray = new ClassFileEntry[nestedEntries
                 .size()];
         nestedEntries.toArray(nestedEntryArray);
         return nestedEntryArray;
     }
 
-    protected void resolve(ClassConstantPool pool) {
+    @Override
+    protected void resolve(final ClassConstantPool pool) {
         super.resolve(pool);
         for(int it = 0; it < attributes.size(); it++) {
-            Attribute attribute = (Attribute) attributes.get(it);
+            final Attribute attribute = (Attribute) attributes.get(it);
             attribute.resolve(pool);
         }
 
         for(int it = 0; it < byteCodes.size(); it++) {
-            ByteCode byteCode = (ByteCode) byteCodes.get(it);
+            final ByteCode byteCode = (ByteCode) byteCodes.get(it);
             byteCode.resolve(pool);
         }
 
         for(int it = 0; it < exceptionTable.size(); it++) {
-            ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(it);
+            final ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(it);
             entry.resolve(pool);
         }
     }
 
+    @Override
     public String toString() {
         return "Code: " + getLength() + " bytes";
     }
 
-    protected void writeBody(DataOutputStream dos) throws IOException {
+    @Override
+    protected void writeBody(final DataOutputStream dos) throws IOException {
         dos.writeShort(maxStack);
         dos.writeShort(maxLocals);
 
         dos.writeInt(codeLength);
         for(int it = 0; it < byteCodes.size(); it++) {
-            ByteCode byteCode = (ByteCode) byteCodes.get(it);
+            final ByteCode byteCode = (ByteCode) byteCodes.get(it);
             byteCode.write(dos);
         }
 
         dos.writeShort(exceptionTable.size());
         for(int it = 0; it < exceptionTable.size(); it++) {
-            ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(it);
+            final ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(it);
             entry.write(dos);
         }
 
         dos.writeShort(attributes.size());
         for(int it = 0; it < attributes.size(); it++) {
-            Attribute attribute = (Attribute) attributes.get(it);
+            final Attribute attribute = (Attribute) attributes.get(it);
             attribute.write(dos);
         }
     }
 
-    public void addAttribute(Attribute attribute) {
+    public void addAttribute(final Attribute attribute) {
         attributes.add(attribute);
         if(attribute instanceof LocalVariableTableAttribute) {
             ((LocalVariableTableAttribute)attribute).setCodeLength(codeLength);
@@ -173,19 +178,21 @@ public class CodeAttribute extends BCIRenumberedAttribute {
         }
     }
 
+    @Override
     protected int[] getStartPCs() {
         // Do nothing here as we've overriden renumber
         return null;
     }
 
-    public void renumber(List byteCodeOffsets) {
+    @Override
+    public void renumber(final List byteCodeOffsets) {
         for(int iter = 0; iter < exceptionTable.size(); iter++) {
-            ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(iter);
+            final ExceptionTableEntry entry = (ExceptionTableEntry) exceptionTable.get(iter);
             entry.renumber(byteCodeOffsets);
         }
     }
 
-    public static void setAttributeName(CPUTF8 attributeName) {
+    public static void setAttributeName(final CPUTF8 attributeName) {
         CodeAttribute.attributeName = attributeName;
     }
 }
